# tinystore

./: .dockerignore  .gitignore  Cargo-Leptos.toml  Cargo.toml  Dockerfile  Leptos.toml  Makefile  README.md  Trunk.toml  docker-compose.yaml  index.html  tailwind.config.js
benches/: .gitkeep
config/: config.example.yaml
crates/auth/: Cargo.toml
crates/auth/src/: credentials.rs  error.rs  lib.rs  middleware.rs  signature_v4.rs
crates/s3-api/: Cargo.toml
crates/s3-api/src/: bucket.rs  error.rs  health.rs  lib.rs  multipart.rs  object.rs  router.rs  xml.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  cli.rs  config.rs  main.rs  state.rs  ui_router.rs
crates/shared/: Cargo.toml
crates/shared/src/: api.rs  bucket.rs  error.rs  lib.rs  object.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  filesystem.rs  lib.rs  memory.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  state.rs
crates/ui/src/api/: client.rs  mod.rs
crates/ui/src/components/: layout.rs  mod.rs  navbar.rs  sidebar.rs
crates/ui/src/pages/: buckets.rs  dashboard.rs  login.rs  mod.rs  objects.rs  settings.rs
docs/: API.md  DEPLOYMENT.md  EXAMPLES.md
end2end/tests/: .gitkeep
public/assets/: style.css
style/: main.scss
tests/: Cargo.toml  README.md
tests/compatibility/: .gitkeep  test_s3_compatibility.py
tests/integration/: .gitkeep  s3_api_tests.rs
