[package]
name = "tinystore-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[[test]]
name = "s3_api_tests"
path = "integration/s3_api_tests.rs"

[dependencies]
# Internal crates
tinystore-shared = { workspace = true }
tinystore-storage = { workspace = true }
tinystore-auth = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full", "test-util"] }

# Data handling
bytes = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
