[package]
name = "tinystore-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
tinystore-shared = { workspace = true }

# Web framework
axum = { workspace = true }
http = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Cryptography
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
