[package]
name = "tinystore-s3-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
tinystore-shared = { workspace = true }
tinystore-storage = { workspace = true }
tinystore-auth = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }

# Data handling
bytes = { workspace = true }
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
