[package]
name = "tinystore-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
tinystore-shared = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Data handling
bytes = { workspace = true }
uuid = { workspace = true }

# Hashing
md-5 = { workspace = true }
hex = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Filesystem traversal
walkdir = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
